--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.suffix=.html
+spring.mail.host=smtp.qq.com
+spring.mail.username=sxZhai1998@qq.com
+spring.mail.password=cfzsyjigxxqnhfdj
+spring.mail.default-encoding=UTF-8
