--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,15 @@
             <version>3.4</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+            <version>8.5.0</version>
+        </dependency>
+
+
+
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
