--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.mail.host=smtp.qq.com
 spring.mail.username=sxZhai1998@qq.com
 spring.mail.password=cfzsyjigxxqnhfdj
 spring.mail.default-encoding=UTF-8
+
+server.port=8080
